# png-compare

./: .clang-format  CMakeLists.txt  LICENSE  README.md  aggregate.cpp  png-compare.cpp
examples/aggregates/aggregate1/: command.txt
examples/aggregates/aggregate1/black-white/: info.txt
examples/aggregates/aggregate1/hello2-hello3/: info.txt
examples/aggregates/aggregate2/: command.txt
examples/aggregates/aggregate2/hello1-hello2/: info.txt
examples/aggregates/aggregate2/one-cat-one-cat-with-noise/: info.txt
examples/aggregates/aggregate3/: command.txt
examples/aggregates/aggregate3/white-white/: info.txt
examples/comparisons/hello1-hello3/: info.txt
examples/comparisons/one-cat-two-cats/: info.txt
